--- a/src/Components/ChangeClass.css
+++ b/src/Components/ChangeClass.css
@@ -36,13 +36,6 @@
 
 }
 
-.change-class.title {
-  font-size: 1.5em;
-  font-weight: 600;
-  text-shadow: 1px 1px 2px rgba(52, 13, 13, 0.991);
-  color: white;
-  text-decoration: underline;
-}
 
 .change-class.close-button {
   position: absolute;
